--- a/tutos/test.ipynb
+++ b/tutos/test.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 127,
    "outputs": [
     {
      "name": "stdout",
@@ -110,14 +110,14 @@
       " [0. 0. 0. 0. 0.]\n",
       " [1. 0. 1. 0. 1.]]\n",
       "------------------\n",
-      "[4 1 3 2 2 1 0 2 0 3 4 4 3 1 3 1 2 2 3]\n",
-      "[[ 6 10 10  3  2]\n",
-      " [ 2  7  8 10 10]\n",
-      " [ 2  6 10  3 10]\n",
-      " [10  3 10  3  9]\n",
-      " [ 6 10  2  2  3]]\n",
+      "[2 2 0 0 4 5 5 4 1 4 1 1 3 2 0]\n",
+      "[[ 2  7  2 10 10]\n",
+      " [10  5  5  6  8]\n",
+      " [10 10 10  9  8]\n",
+      " [10 10  7  9  9]\n",
+      " [ 3  6  7  2 10]]\n",
       "------------------\n",
-      "[3 2 2 2 3 3 3 2 2 3]\n"
+      "[2 2 5 5 3 2]\n"
      ]
     }
    ],
@@ -227,34 +227,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 90,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[6 3 2]\n",
-      " [7 2 0]]\n",
+      "[[7 0]\n",
+      " [9 5]\n",
+      " [2 7]]\n",
       "------------------\n",
-      "[13  5  2]\n",
+      "[18 12]\n",
       "------------------\n",
-      "[[ 6  3  2]\n",
-      " [13  5  2]]\n",
+      "[[ 7  0]\n",
+      " [16  5]\n",
+      " [18 12]]\n",
       "------------------\n",
-      "[42  6  0]\n",
+      "[126   0]\n",
       "------------------\n",
-      "[0 1 1]\n",
+      "[2 0]\n",
       "------------------\n",
-      "[[2 1 0]\n",
-      " [2 1 0]]\n",
+      "[[1 0]\n",
+      " [1 0]\n",
+      " [0 1]]\n",
       "------------------\n",
-      "[[4.03428793e+02 2.00855369e+01 7.38905610e+00]\n",
-      " [1.09663316e+03 7.38905610e+00 1.00000000e+00]]\n"
+      "[[1.09663316e+03 1.00000000e+00]\n",
+      " [8.10308393e+03 1.48413159e+02]\n",
+      " [7.38905610e+00 1.09663316e+03]]\n",
+      "------------------\n",
+      "[[ 0.75390225  1.        ]\n",
+      " [-0.91113026  0.28366219]\n",
+      " [-0.41614684  0.75390225]]\n",
+      "------------------\n",
+      "9.666666666666666\n",
+      "------------------\n",
+      "3.1091263510296048\n",
+      "------------------\n",
+      "[[ 1.  1. -1.]\n",
+      " [ 1.  1. -1.]\n",
+      " [-1. -1.  1.]]\n",
+      "------------------\n",
+      "(array([0, 2, 5, 7, 9]), array([1, 1, 1, 2, 1], dtype=int64))\n",
+      "valeur 0 apparait 1 fois\n",
+      "valeur 2 apparait 1 fois\n",
+      "valeur 5 apparait 1 fois\n",
+      "valeur 9 apparait 1 fois\n",
+      "valeur 7 apparait 2 fois\n",
+      "[0 2 5 9 7]\n",
+      "------------------\n",
+      "nan\n",
+      "0.07444878561239017\n",
+      "0.08\n",
+      "0.0\n"
      ]
     }
    ],
    "source": [
-    "A = np.random.randint(0, 10, [2,3])\n",
+    "A = np.random.randint(0, 10, [3,2])\n",
     "print(A)\n",
     "print(\"------------------\")\n",
     "print(A.sum(axis=0))\n",
@@ -267,7 +296,158 @@
     "print(\"------------------\")\n",
     "print(A.argsort())\n",
     "print(\"------------------\")\n",
-    "print(np.exp(A))\n"
+    "print(np.exp(A))\n",
+    "print(\"------------------\")\n",
+    "print(np.cos(A))\n",
+    "print(\"------------------\")\n",
+    "#variance\n",
+    "print(A.var())\n",
+    "print(\"------------------\")\n",
+    "#ecart type\n",
+    "print(A.std())\n",
+    "print(\"------------------\")\n",
+    "print(np.corrcoef(A))\n",
+    "print(\"------------------\")\n",
+    "print(np.unique(A, return_counts=True))\n",
+    "values, counts = np.unique(A, return_counts=True)\n",
+    "for i, j in zip(values[counts.argsort()], counts[counts.argsort()]):\n",
+    "    print(f'valeur {i} apparait {j} fois')\n",
+    "print(values[counts.argsort()])\n",
+    "print(\"------------------\")\n",
+    "B = np.random.randn(5,5)\n",
+    "B[0, 2] = np.nan\n",
+    "B[3, 1] = np.nan\n",
+    "print(np.mean(B))\n",
+    "print(np.nanmean(B))\n",
+    "print(np.isnan(B).sum() / B.size)\n",
+    "B[np.isnan(B)] = 0.\n",
+    "print(np.isnan(B).sum() / B.size)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Numpy 5 (Algebre Lineaire)\n",
+    "*package <u>numpy.linalg<u/>*\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "A = np.ones((2,3))\n",
+    "B = np.ones((3,2))\n",
+    "C = np.random.randint(0,10,[3,3])\n",
+    "print(\"------------------\")\n",
+    "print(A.shape)\n",
+    "print(A.T.shape)\n",
+    "#produit matriciel\n",
+    "print(\"------------------\")\n",
+    "print(A.dot(B))\n",
+    "print(B.dot(A))\n",
+    "print(\"------------------\")\n",
+    "print(np.linalg.det(C))\n",
+    "print(\"------------------\")\n",
+    "print(np.linalg.inv(C))\n",
+    "print(np.linalg.pinv(C))\n",
+    "print(\"------------------\")\n",
+    "print(np.linalg.eig(C)) #valeurs propres\n",
+    "print(\"------------------\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 117,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------\n",
+      "(2, 3)\n",
+      "(3, 2)\n",
+      "------------------\n",
+      "[[3. 3.]\n",
+      " [3. 3.]]\n",
+      "[[2. 2. 2.]\n",
+      " [2. 2. 2.]\n",
+      " [2. 2. 2.]]\n",
+      "------------------\n",
+      "-63.99999999999998\n",
+      "------------------\n",
+      "[[ 0.3125   -0.546875  0.0625  ]\n",
+      " [-0.375     0.65625   0.125   ]\n",
+      " [ 0.375    -0.40625  -0.125   ]]\n",
+      "[[ 0.3125   -0.546875  0.0625  ]\n",
+      " [-0.375     0.65625   0.125   ]\n",
+      " [ 0.375    -0.40625  -0.125   ]]\n",
+      "------------------\n",
+      "(array([-5.62433338,  1.07907517, 10.54525821]), array([[ 0.47907466, -0.6145704 , -0.72904057],\n",
+      "       [ 0.33687773,  0.6370834 , -0.35692494],\n",
+      "       [-0.8105559 , -0.46521818, -0.58404147]]))\n",
+      "------------------\n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Numpy 5 (Standardisation)\n",
+    "$A' = \\frac{A - \\bar{A}}{\\sigma{A}}$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[44 47 64 67 67]\n",
+      " [ 9 83 21 36 87]\n",
+      " [70 88 88 12 58]\n",
+      " [65 39 87 46 88]\n",
+      " [81 37 25 77 72]\n",
+      " [ 9 20 80 69 79]\n",
+      " [47 64 82 99 88]\n",
+      " [49 29 19 19 14]\n",
+      " [39 32 65  9 57]\n",
+      " [32 31 74 23 35]]\n",
+      "[[-0.02206157]\n",
+      " [-1.56637126]\n",
+      " [ 1.12513992]\n",
+      " [ 0.90452425]\n",
+      " [ 1.6104944 ]\n",
+      " [-1.56637126]\n",
+      " [ 0.11030784]\n",
+      " [ 0.1985541 ]\n",
+      " [-0.24267724]\n",
+      " [-0.55153918]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "A = np.random.randint(0, 100, [10, 5])\n",
+    "print(A)\n",
+    "print((A[:,:1] - np.mean(A[:,:1])) / np.std(A[:,:1]))"
    ],
    "metadata": {
     "collapsed": false,
