--- a/tutos/numpy.ipynb
+++ b/tutos/numpy.ipynb
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -430,16 +430,22 @@
       " [49 29 19 19 14]\n",
       " [39 32 65  9 57]\n",
       " [32 31 74 23 35]]\n",
-      "[[-0.02206157]\n",
-      " [-1.56637126]\n",
-      " [ 1.12513992]\n",
-      " [ 0.90452425]\n",
-      " [ 1.6104944 ]\n",
-      " [-1.56637126]\n",
-      " [ 0.11030784]\n",
-      " [ 0.1985541 ]\n",
-      " [-0.24267724]\n",
-      " [-0.55153918]]\n"
+      "------------------\n",
+      "[[-0.02206157  0.          0.13173823  0.72539252  0.10755798]\n",
+      " [-1.56637126  1.61579632 -1.48676006 -0.33034307  0.96802178]\n",
+      " [ 1.12513992  1.84021247  1.03508612 -1.14768676 -0.27965074]\n",
+      " [ 0.90452425 -0.35906585  0.99744662  0.0102168   1.01104497]\n",
+      " [ 1.6104944  -0.44883231 -1.33620208  1.0659524   0.32267393]\n",
+      " [-1.56637126 -1.21184724  0.73397016  0.7935045   0.62383626]\n",
+      " [ 0.11030784  0.76301493  0.80924915  1.81518411  1.01104497]\n",
+      " [ 0.1985541  -0.80789816 -1.56203905 -0.90929485 -2.17267111]\n",
+      " [-0.24267724 -0.67324847  0.16937773 -1.24985473 -0.32267393]\n",
+      " [-0.55153918 -0.7181317   0.50813319 -0.77307091 -1.26918412]]\n",
+      "------------------\n",
+      "[-2.22044605e-17 -4.44089210e-17  0.00000000e+00 -1.22124533e-16\n",
+      " -4.44089210e-17]\n",
+      "------------------\n",
+      "[1. 1. 1. 1. 1.]\n"
      ]
     }
    ],
@@ -447,7 +453,90 @@
     "np.random.seed(0)\n",
     "A = np.random.randint(0, 100, [10, 5])\n",
     "print(A)\n",
-    "print((A[:,:1] - np.mean(A[:,:1])) / np.std(A[:,:1]))"
+    "print(\"------------------\")\n",
+    "B = (A - A.mean(axis=0)) / A.std(axis=0)\n",
+    "print(B)\n",
+    "print(\"------------------\")\n",
+    "print(B.mean(axis=0))\n",
+    "print(\"------------------\")\n",
+    "print(B.std(axis=0))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Numpy 6 (Broadcasting)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]]\n",
+      "------------------\n",
+      "[[1. 1. 1.]]\n",
+      "------------------\n",
+      "[[5 6 7]]\n",
+      "------------------\n",
+      "[[5]\n",
+      " [5]\n",
+      " [5]\n",
+      " [8]]\n",
+      "------------------\n",
+      "[[2. 2. 2.]\n",
+      " [2. 2. 2.]\n",
+      " [2. 2. 2.]]\n",
+      "------------------\n",
+      "[[7. 8. 9.]\n",
+      " [7. 8. 9.]\n",
+      " [7. 8. 9.]]\n",
+      "------------------\n",
+      "[[10 11 12]\n",
+      " [10 11 12]\n",
+      " [10 11 12]\n",
+      " [13 14 15]]\n",
+      "------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.ones((3,3))\n",
+    "B = np.ones((1,3))\n",
+    "C = np.random.randint(1, 10, (1,3))\n",
+    "F = np.random.randint(1, 10, (4,1))\n",
+    "print(A)\n",
+    "print(\"------------------\")\n",
+    "print(B)\n",
+    "print(\"------------------\")\n",
+    "print(C)\n",
+    "print(\"------------------\")\n",
+    "print(F)\n",
+    "print(\"------------------\")\n",
+    "D = A + B\n",
+    "print(D)\n",
+    "print(\"------------------\")\n",
+    "E = D + C\n",
+    "print(E)\n",
+    "print(\"------------------\")\n",
+    "G = F + C\n",
+    "print(G)\n"
    ],
    "metadata": {
     "collapsed": false,
