--- a/projet/generation.ipynb
+++ b/projet/generation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import random\n",
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.16872400000284\n"
+      "40.7650751\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
     "    for i in range(1, n + 1):\n",
     "        cities.append({\"id_ville\": i})\n",
     "        for j in range(i - 1, -1, -1):\n",
-    "            if random.random() > 0.95: roads.append({\"route\": \"route \" + str(i) + \"/\" + str(j),\"id_ville_1\": i,\"id_ville_2\": j,\"est_oriente\": True,\"poids_1\": int(random.random() * 590 + 10),\"poids_2\": int(random.random() * 590 + 10),\"trafic\": [random.random() * 0.50 + 0.50 for _ in range(0, 24, 4)]})\n",
+    "            if random.random() > 0.95: roads.append({\"route\": str(i) + \"/\" + str(j),\"id_ville_1\": i,\"id_ville_2\": j,\"est_oriente\": True,\"poids_1\": int(random.random() * 590 + 10),\"poids_2\": int(random.random() * 590 + 10),\"trafic\": [random.random() * 0.50 + 0.50 for _ in range(0, 24, 4)]})\n",
     "            else: roads.append({\"route\": \"route \" + str(i) + \"/\" + str(j),\"id_ville_1\": i,\"id_ville_2\": j,\"est_oriente\": False,\"poids\": int(random.random() * 590 + 10),\"trafic\": [random.random() * 0.50 + 0.50 for _ in range(0, 24, 4)]})\n",
     "        if len(roads) >= 1000:\n",
     "            collection_routes.insert_many(roads)\n",
@@ -85,7 +85,7 @@
     "    print(time.perf_counter() - start)\n",
     "\n",
     "\n",
-    "generate_cities(1000)"
+    "generate_cities(2000)"
    ],
    "metadata": {
     "collapsed": false,
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def generate_clients(n):\n",
