--- a/projet/generation.ipynb
+++ b/projet/generation.ipynb
@@ -74,8 +74,8 @@
     "    for i in range(1, n + 1):\n",
     "        cities.append({\"id_ville\": i})\n",
     "        for j in range(i - 1, -1, -1):\n",
-    "            if random.random() > 0.95: roads.append({\"route\": str(i) + \"/\" + str(j),\"id_ville_1\": i,\"id_ville_2\": j,\"est_oriente\": True,\"poids_1\": int(random.random() * 590 + 10),\"poids_2\": int(random.random() * 590 + 10),\"trafic\": [random.random() * 0.50 + 0.50 for _ in range(0, 24, 4)]})\n",
-    "            else: roads.append({\"route\": \"route \" + str(i) + \"/\" + str(j),\"id_ville_1\": i,\"id_ville_2\": j,\"est_oriente\": False,\"poids\": int(random.random() * 590 + 10),\"trafic\": [random.random() * 0.50 + 0.50 for _ in range(0, 24, 4)]})\n",
+    "            if random.random() > 0.95: roads.append({\"route\": f\"{i}/{j}\",\"id_ville_1\": i,\"id_ville_2\": j,\"est_oriente\": True,\"poids_1\": int(random.random() * 590 + 10),\"poids_2\": int(random.random() * 590 + 10),\"trafic\": [random.random() * 0.50 + 0.50 for _ in range(0, 24, 4)]})\n",
+    "            else: roads.append({\"route\": f\"{i}/{j}\",\"id_ville_1\": i,\"id_ville_2\": j,\"est_oriente\": False,\"poids\": int(random.random() * 590 + 10),\"trafic\": [random.random() * 0.50 + 0.50 for _ in range(0, 24, 4)]})\n",
     "        if len(roads) >= 1000:\n",
     "            collection_routes.insert_many(roads)\n",
     "            roads = []\n",
